examples/test/testpolicy12547.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12547
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key48: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value12
          key23: value4
          key25: value42
      podSelector:
        matchLabels:
          key16: value26
